2019-07-16  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1256

	* CMakeLists.txt:

	Add compiler flag -Wno-deprecated-copy for now to get on top of
	GCC 9's warning frenzy. Should be fixed eventually though.

	* src/m_linemixing.cc (abs_xsec_per_speciesAddLineMixedBands):

	Add macro to suppress warnings of unused parameters when compiling
	without Fortran support.

2019-07-16  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1255

	* 3rdparty/invlib/src/invlib/convergence_criteria.h,
	src/linemixing.cc

	Comment out names of unused parameters to silence compiler warnings.

	* src/m_cloudradar.cc, src/m_optproperties.cc, src/rt4.cc:

	Don't implicitly convert floats to bool. Replaced by proper comparison
	for readability and to silence compiler warning.

	* src/m_optproperties.cc (pha_mat_sptFromMonoData):

	Initialize T_gp to satisfy clang analyzer.

	* src/covariance_matrix.cc (CovarianceMatrix::generate_blocks),
	3rdparty/invlib/src/invlib/interfaces/arts_wrapper.h
	(ArtsCovarianceMatrixWrapper::ArtsCovarianceMatrixWrapper):

	Rename local variable to avoid shadowing a class function of same name.

2019-07-16  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1254

	* src/matpackII.cc (Sparse::insert_elements):

	Set tripletList elements with index operator instead of push_back.
	Because the tripletList was already pre-allocated with n elements,
	push_back led to twice the number of elements being added into the
	Sparse matrix. Since the first half of triplets were all (0, 0, 0), no
	further bugs should have been caused by this.

2019-07-16  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1253

	* 3rdparts/disort1.2/ErrPack.f
	Replaced STOP statement with RETURN to avoid hard shutdown of
	ARTS on convergence error.

	* src/m_psd.cc:
	Allow D_m and N_0^* to be used as parameters.

	* src/m_retrieval.cc:
	Fixed error messages when dimensions of covariance matrix
	are wrong.

	src/rt4.cc: