@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <arts format="ascii" version="1">
 <Vector nelem="8">
-87.9580007103544
-2.01926130646108
-4.1373821387467e-09
-1.98765307375465e-08
-87.7027918559418
-2.00965656789422
-4.19551860557099e-09
-1.99625445845604e-08
+87.9580395100307
+2.01926184415574
+4.13738169938189e-09
+1.98765286379683e-08
+87.7028309137349
+2.00965711898094
+4.19551818796567e-09
+1.99625425924678e-08
 </Vector>
 </arts>
